--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,14 @@
         </plugins>
     </build>
 
-    <dependencies>
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <url>http://packages.confluent.io/maven/</url>
+        </repository>
+    </repositories>
 
+    <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_2.12</artifactId>
@@ -48,7 +54,11 @@
             <artifactId>avro-tools</artifactId>
             <version>1.8.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+            <version>5.2.1</version>
+        </dependency>
     </dependencies>
-    
+
 </project>
